osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_experiments/test_experimentwhen_uses_valid_experiment.txt
error: experiment 'A' not defined
--> main.sml:4:78
     |
   4 | EW = ExperimentWhen(control=[True, True], branch_b=[False, False], experiment=A)
     |                                                                               ^
